2014-03-21 Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* beacon.c:
	    Correct close() of exec type beacon file descriptor.

	* interface.c:
	    Correct primary <interface> flags defaults, and setting of
	    "telem-to-is <boolean>" and "telem-t-rf <boolean>" flags.

	* telemetry.c:
	    Debug-printout (debug>1) of telemetry about time until next
	    output, plus packet that is being telemetered along with
	    hex coding of interface flags. Also streamlined the telemetry
	    label output code.

2014-03-11 Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* ttyreader.c:
	    Do open /dev/ttySnnn up front in non-blocking mode so that
	    if the serial port hardware needs to be wired specially to
	    be considered active ( = flow control ) the serial port open
	    will not stop -- hang -- at it missing.

	* agwpesocket.c:
	    Update time comparison codes to current model.

	* aprx.c:
	    time_reset gets cleared only after first round through
	    the main loop.

	* beacon.c:
	    The 'file' and 'exec' directives need at most 256 bytes of read
	    buffer to get beacon body content. No need for 2kB buffer alloc.

2014-03-08 Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* digipeater.c:
	    Corrected the digipeating recognition algorithm.
	    If the current leading VIA field value without
	    H-bit set is not recognized as transmitter callsign,
	    transmitter alias, or value of <trace> or <wide>
	    directive at digipeater source or digipeater transmitter
	    configuration, then the packet is _not_ eligible for
	    digipeat.

2014-03-08 Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* aprx.h, beacon.c, digipeater.c, parse_aprs.c, telemetry.c,
	  timercmp.c, ttyreader.c:
	     Fix all things flagged at CFLAGS="-g -O2 -Wall".

	* configure.in, config.h.in, aprx.c:
	    Autoconf test for <sys/wait.h>, and include if available.

	* aprx.h, beacon.c, config.c, digipeater.c, interface.c, netax25.c,